<resources>
    <string name="app_name">CavoshCafe202620</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carrito">Carrito</string>
    <string name="menu">Menú</string>
    <string name="favoritos">Favoritos</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="correo">Correo</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="vamos_a_iniciar_sesion">Vamos a Iniciar Sesión</string>
    <string name="texto_header_login">Vamos a Iniciar Sesion</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="signed">Iniciar Sesión</string>
    <string name="texto_login">Inicia sesion usando</string>
    <string name="content_description">Este es el boton para presionar facebook</string>
    <string name="ct_facebook">Este es el boton para presionar Facebook</string>
    <string name="ct_google">Este es el boton para presionar Google</string>
    <string name="ct_apple">Este es el boton para presionar Apple</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta</string>
    <string name="password">Contraseña</string>
    <string name="texto_facebook">Este es el boton para Facebook</string>
    <string name="texto_google">Este es el boton para Google</string>
    <string name="texto_apple">Este es el boton para Apple</string>
    <string name="no_tienes_cuenta">No tienes cuenta</string>
    <string name="registrarse_ahora">Registrarse ahora</string>
    <string name="texto_header_registrar">Vamos a registrarte</string>
    <string name="nombres">Nombres</string>
    <string name="passwordd">Contraseña</string>
    <string name="confirmar_passwordd">Confirmar contraseña</string>
    <string name="register">Registrar</string>
    <string name="texto_register">Registrate aqui</string>
    <string name="tienes_una_cuenta">Ya tienes una cuenta</string>
    <string name="content_description_cafe">Granos de cafe</string>
    <string name="comenzar">Comenzar</string>
    <string name="content_descripcion">Logo de Cafes</string>
    <string name="cambiar">Cambiar</string>
    <string name="cavosh">Cavosh</string>
    <string name="text_cavosh">Cavosh</string>
    <string name="texto_frecuentemente_ordenados">Frecuentemente ordenados...</string>
    <string name="bienvenido_a">Bienvenido a</string>
    <string name="saludo_usuario">Buenos dias, usuario</string>
    <string name="tu_cafe_label">Your cafe: Cavosh Cafe</string>
    <string name="direccion_cafe">Arenales 471, Lima</string>
    <string name="buscar_hint">Buscar</string>
    <string name="texto_novedades">Novedades</string>
    <string name="texto_categorias">Categories</string>
    <string name="cat_bebidas_calientes">Hot drinks</string>
    <string name="cat_bebidas_frias">Cold drinks</string>
    <string name="cat_snacks">Snacks</string>
    <string name="cat_todos">All</string>
    <string name="producto_size_label">Size</string>
    <string name="producto_customize_label">Customize your coffee</string>
    <string name="talla_small">Small</string>
    <string name="talla_medium">Medium</string>
    <string name="talla_large">Large</string>
    <string name="etiqueta_milk">Milk</string>
    <string name="valor_milk">Oat</string>
    <string name="etiqueta_cream">Cream</string>
    <string name="valor_cream">No</string>
    <string name="etiqueta_cafeina">Caffeine</string>
    <string name="valor_cafeina">Yes</string>
    <string name="texto_total_price">Total price</string>
    <string name="texto_add_to_cart">Add to cart</string>
    <string name="volumen_250ml">250ml</string>
    <string name="descripcion_producto_mock">Our Caramel Macchiato is the perfect combination of a rich-tasting espresso, creamy milk and the sweet, buttery aroma of caramel.</string>
    <string name="favorites_titulo">Favorites</string>
    <string name="texto_editar">Edit</string>
    <string name="items_formato">%d items</string>
    <string name="simbolo_moneda">S/</string>
</resources>