<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_gray"
    tools:context=".ui.Favoritos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeaderFavoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_header_police_blue"
        android:paddingHorizontal="20dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="-24dp"
            android:layout_marginEnd="-24dp"
            android:alpha="0.3"
            android:contentDescription="@string/content_description_cafe"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_cafes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvTituloFavoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_titulo"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvContadorFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/steel_teal"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/clHeaderFavoritos"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="4 items" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavoritos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:paddingHorizontal="20dp"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvContadorFavoritos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvEditarFavoritos"
        tools:listitem="@layout/item_favorito" />

    <TextView
        android:id="@+id/tvEditarFavoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="96dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        android:text="@string/texto_editar"
        android:textColor="@color/carmine_pink"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>