<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_gray"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:paddingBottom="100dp"
    tools:context=".ui.Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeaderMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_header_police_blue"
            android:paddingTop="24dp"
            android:paddingBottom="52dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvTituloMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBuscadorMenu"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/sh_btn_light_silver"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="@id/clHeaderMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etBuscarMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/buscar_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivBuscarMenu" />

            <ImageView
                android:id="@+id/ivBuscarMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/sh_notificacion_on"
                android:clickable="true"
                android:contentDescription="@string/content_description"
                android:focusable="true"
                android:padding="10dp"
                android:src="@drawable/ic_buscar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvCategorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:text="@string/texto_categorias"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/clBuscadorMenu"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvCategorias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_categoria" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductosGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingHorizontal="14dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintTop_toBottomOf="@id/rvCategorias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_producto_grid" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>